--- a/Julequiz/julequiz.html
+++ b/Julequiz/julequiz.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <script src="script.js"></script>
     <!-- Meta-informasjon, inkludert tegnsett og skjermstørrelsesjustering -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,8 @@
     <title>Julequiz</title>
 
     <!-- Kobler til ekstern CSS-fil for styling -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="
+  
 </head>
 <body>
 
