--- a/Julequiz/julequiz.html
+++ b/Julequiz/julequiz.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <script src="script.js"></script>
     <!-- Meta-informasjon, inkludert tegnsett og skjermstørrelsesjustering -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +9,11 @@
     <!-- Tittelen på dokumentet som vises i nettlesertabben -->
     <title>Julequiz</title>
 
+     <!-- Kobler til ekstern JS-fil for styling -->
+    <script src="script.js"></script>
+
     <!-- Kobler til ekstern CSS-fil for styling -->
-    <link rel="
-  
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
